# interactive-story-ai

./: README.md
backend/: .gitignore  main.py  pyproject.toml  requirements.txt
backend/api/: auth.py  job.py  story.py
backend/core/: auth.py  config.py  prompts.py  security.py
backend/db/: database.py  dependancy.py
backend/models/: __init__.py  job.py  models.py  story.py  user.py
backend/schemas/: job.py  story.py  user.py
backend/services/: job_service.py  story_generator.py  user_service.py
frontend/: .env.production  package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: auth.js  client.js  jobs.js  story.js
frontend/src/auth/: AuthProvider.jsx  auth.js  useAuth.js
frontend/src/components/: LoadingStatus.jsx  StoryGenerator.jsx  StoryLoader.jsx  ThemeInput.jsx
frontend/src/components/layout/: NavItem.jsx  Navbar.jsx
frontend/src/components/story/: StoryContainer.jsx  StoryControls.jsx  StoryEnding.jsx  StoryHeader.jsx  StoryOptions.jsx  StoryText.jsx  useTypewriter.js
frontend/src/components/ui/: GlassCard.jsx  GlowButton.jsx  GradientText.jsx  InputField.jsx  Loader.jsx  NotFound.jsx
frontend/src/hooks/: useJobPolling.js  useStoryFlow.js
frontend/src/pages/: Dashboard.jsx  Login.jsx  Register.jsx  StoryPage.jsx
