[project]
name = "backend"
version = "0.1.0"
description = "AI-powered full-stack “Choose Your Own Adventure” platform built with FastAPI and React, featuring asynchronous story generation, JWT authentication, and a dynamic decision-tree engine."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt==4.0.1",
    "fastapi[all]>=0.136.0",
    "jose>=1.0.0",
    "jwt>=1.4.0",
    "langchain>=1.2.15",
    "langchain-google-genai>=4.2.2",
    "langchain-openai>=1.1.14",
    "passlib[bcrypt]==1.7.4",
    "pip==26.0.1",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.49",
    "uv==0.11.7",
    "uvicorn>=0.44.0",
]
